# llm-otel-proxy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  claude.md  docker-compose.yml  otel-collector.yml  pyproject.toml  tempo.yml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-03-22-llm-observatory-dashboard-design.md
grafana/dashboards/: llm-observatory.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
src/llm_otel_sidecar/: __main__.py  config.py  main.py
src/llm_otel_sidecar/parsers/: anthropic.py  base.py  openai.py
src/llm_otel_sidecar/proxy/: anthropic.py  openai.py  server.py
src/llm_otel_sidecar/telemetry/: conventions.py  emitter.py
tests/integration/: test_anthropic_proxy.py  test_openai_proxy.py  test_proxy.py
tests/unit/: test_anthropic_parser.py  test_credentials.py  test_emitter.py  test_openai_parser.py  test_openai_proxy.py  test_security.py
