[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-otel-sidecar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_otel_sidecar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
